code/dotnet/FactSetTickHistory/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# FactSet Tick History client library for .NET

[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.FactSetTickHistory)](https://www.nuget.org/packages/FactSet.SDK.FactSetTickHistory)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Tick History provides dynamic access to historical tick data for a specific security for specific dates or date range.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.1.0
- Package version: 0.31.1
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.FactSetTickHistory -v 0.31.1
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.FactSetTickHistory -Version 0.31.1
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Net;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.FactSetTickHistory.Api;
using FactSet.SDK.FactSetTickHistory.Client;
using FactSet.SDK.FactSetTickHistory.Model;

namespace Example
{
    public static class GetLevel1FileStatusExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.FactSetTickHistory.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new Level1Api(config);
            var id = "id_example";  // string | id returned by files create endpoint to poll and collect status of the query

            try
            {
                // Returns the status of the ID
                Level1Api.GetLevel1FileStatusResponseWrapper result = apiInstance.GetLevel1FileStatus(id);

                switch (result.StatusCode)
                {

                    case (HttpStatusCode)201:
                        Console.WriteLine(result.Response201);
                        break;

                    case (HttpStatusCode)202:
                        Console.WriteLine(result.Response202);
                        break;

                }
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling Level1Api.GetLevel1FileStatus: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/tick-history/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*Level1Api* | [**GetLevel1FileStatus**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/Level1Api.md#getlevel1filestatus) | **GET** /level1/files/status | Returns the status of the ID
*Level1Api* | [**GetMinutebarsFileStatus**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/Level1Api.md#getminutebarsfilestatus) | **GET** /level1/files/minute-bars/status | Returns the status of the ID
*Level1Api* | [**GetMinutebarsFiles**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/Level1Api.md#getminutebarsfiles) | **GET** /level1/files/minute-bars/get | Returns the Minute bars data in files requested in the /create endpoint
*Level1Api* | [**GetTickHistoryLevel1Files**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/Level1Api.md#gettickhistorylevel1files) | **GET** /level1/files/get | Returns the tick-by-tick data in files requested in the /create endpoint
*Level1Api* | [**RequestMinutebarsFiles**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/Level1Api.md#requestminutebarsfiles) | **POST** /level1/files/minute-bars/create | Requests the creation of Minute bars file
*Level1Api* | [**RequestTickHistoryCoverage**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/Level1Api.md#requesttickhistorycoverage) | **GET** /level1/coverage | Returns the coverage for the requested ticker/isin along with other response fields for Level1 data.
*Level1Api* | [**RequestTickHistoryLevel1Files**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/Level1Api.md#requesttickhistorylevel1files) | **POST** /level1/files/create | Requests the creation of tick-by-tick file
*Level2Api* | [**GetLevel2FileStatus**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/Level2Api.md#getlevel2filestatus) | **GET** /level2/files/status | Returns the status of the ID
*Level2Api* | [**GetTickHistoryLevel2Files**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/Level2Api.md#gettickhistorylevel2files) | **GET** /level2/files/get | Returns the tick history files requested in the /create endpoint
*Level2Api* | [**RequestTickHistoryLeve2Files**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/Level2Api.md#requesttickhistoryleve2files) | **POST** /level2/files/create | Returns the ID for the requested data.


## Documentation for Models

 - [Model.CheckFiles](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/CheckFiles.md)
 - [Model.CompletedResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/CompletedResponse.md)
 - [Model.CoverageResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/CoverageResponse.md)
 - [Model.CoverageTickHistory](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/CoverageTickHistory.md)
 - [Model.DateRangeOne](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/DateRangeOne.md)
 - [Model.DateTimePeriod](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/DateTimePeriod.md)
 - [Model.DateTimePeriodMin](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/DateTimePeriodMin.md)
 - [Model.ErrorExample](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/ErrorExample.md)
 - [Model.ErrorObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/ErrorObject.md)
 - [Model.Files](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/Files.md)
 - [Model.FilesOne](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/FilesOne.md)
 - [Model.GetFilesMinuteResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/GetFilesMinuteResponse.md)
 - [Model.GetFilesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/GetFilesResponse.md)
 - [Model.Granularity](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/Granularity.md)
 - [Model.Level1RequestBody](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/Level1RequestBody.md)
 - [Model.Level2RequestBody](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/Level2RequestBody.md)
 - [Model.LevelTwoRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/LevelTwoRequest.md)
 - [Model.LeveloneRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/LeveloneRequest.md)
 - [Model.LeveltwoGetFilesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/LeveltwoGetFilesResponse.md)
 - [Model.Meta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/Meta.md)
 - [Model.MinRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/MinRequest.md)
 - [Model.MinTickData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/MinTickData.md)
 - [Model.MinutesbarRequestBody](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/MinutesbarRequestBody.md)
 - [Model.Pagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/Pagination.md)
 - [Model.ResponseFileType](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/ResponseFileType.md)
 - [Model.Status](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/Status.md)
 - [Model.StatusOne](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/StatusOne.md)
 - [Model.SubmittedResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/SubmittedResponse.md)
 - [Model.TickData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/TickData.md)
 - [Model.TickDataLevel2](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/TickDataLevel2.md)
 - [Model.Type](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetTickHistory/v2/docs/Type.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
